logs/rtpmidi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rtpmidi'...
Listing './lib/python3.5/site-packages/rtpmidi/engines'...
Listing './lib/python3.5/site-packages/rtpmidi/engines/midi'...
Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/list_circ.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (list_circ.py, line 40)
Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/midi_in.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/midi_in.py", line 87
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/midi_object.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/midi_object.py", line 4
    TWO_TO_THE_32ND = 2L<<32
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/midi_out.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/midi_out.py", line 80
    print "  SafeKeyboard is running for Midi Out"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/midi_session.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/midi_session.py", line 65
    print "Your configuration:"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/recovery_journal.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/recovery_journal.py", line 91
    print "!!! Gerer si lenght of channel > 1024"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/recovery_journal_chapters.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/recovery_journal_chapters.py", line 534
    print " problem with first " + str(first) + " length: " \
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rtpmidi/engines/midi/ringBuffer.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/engines/midi/ringBuffer.py", line 9
    print "append"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rtpmidi/protocols'...
Listing './lib/python3.5/site-packages/rtpmidi/protocols/rtp'...
Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/list_circ.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (list_circ.py, line 40)
Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/nat.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/nat.py", line 35
    print "listenmulticast failed, trying", port
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/packets.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/packets.py", line 26
    xhdrtype, len(xhdrdata), `xhdrdata`,)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/protocol.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/protocol.py", line 31
    TWO_TO_THE_16TH = 2L<<16
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/rtcp.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/rtcp.py", line 126
    print "sending rtcp report"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/rtp_control.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/rtp_control.py", line 28
    raise Exception, "This session type is not supported"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/sdp.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/sdp.py", line 291
    raise ValueError, "only know about suboptions for 'a' so far"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/stun.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/stun.py", line 159
    print avtype, addr, port
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/protocols/rtp/utils.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/protocols/rtp/utils.py", line 79
    print e.arg
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rtpmidi/runner.py'...
***   File "./lib/python3.5/site-packages/rtpmidi/runner.py", line 34
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rtpmidi-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
